--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-modal": "^3.13.1",
     "react-router": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
