--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-hook-form": "^7.6.0",
     "react-modal": "^3.13.1",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
     "yarn": "^1.22.10"
