Изменил линтер, добавил основу новыой страницы

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,5 +28,12 @@
         "react/jsx-uses-react": "off",
         "react/react-in-jsx-scope": "off",
         "no-underscore-dangle": "off"
+    },
+    "settings": {
+      "import/resolver": {
+        "node": {
+          "extensions": [".js", ".jsx", ".ts", ".tsx"]
+        }
+      }
     }
 }
