delete rule in config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,12 +27,6 @@
         "react/state-in-constructor": "off",
         "react/jsx-uses-react": "off",
         "react/react-in-jsx-scope": "off",
-        "no-underscore-dangle": "off",
-        "import/no-unresolved": [
-          "error",
-          {
-            "ignore": [ "svg" ]
-          }
-        ]
+        "no-underscore-dangle": "off"
     }
 }
