--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
         "react/state-in-constructor": "off",
         "react/jsx-uses-react": "off",
         "react/react-in-jsx-scope": "off",
-        "no-underscore-dangle": "off"
+        "no-underscore-dangle": "off",
+        "react/jsx-props-no-spreading": 0
     }
 }
