--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
         "react/jsx-uses-react": "off",
         "react/react-in-jsx-scope": "off",
         "no-underscore-dangle": "off",
-        "react/jsx-props-no-spreading": 0
+        "react/jsx-props-no-spreading": 0,
+        "no-return-assign": [2, "except-parens"]
     }
 }
