--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,11 @@
 {
+    "settings": {
+        "import/resolver" : {
+            "node" : {
+              "paths": ["src"]
+            }
+        }
+    },
     "env": {
         "browser": true,
         "es2021": true,
@@ -28,7 +35,6 @@
         "react/jsx-uses-react": "off",
         "react/react-in-jsx-scope": "off",
         "no-underscore-dangle": "off",
-        "react/jsx-props-no-spreading": 0,
-        "no-return-assign": [2, "except-parens"]
+        "react/jsx-props-no-spreading": 0
     }
 }
