--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.6.4",
     "react-modal": "^3.13.1",
+    "react-paginate": "^7.1.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
