--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-bbbs",
   "version": "0.1.0",
+  "homepage": "http://ilyaSy.github.io/react-bbbs",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
