--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.0.9",
     "react-hook-form": "^7.6.4",
     "react-modal": "^3.13.1",
     "react-paginate": "^7.1.3",
